--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Careers</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Tech Careers</h1>
@@ -16,14 +17,14 @@
         Your role involves analyzing customer or user needs, designing programs, writing code, testing designs, and documenting programs.
         You may also assist with upgrades or maintenance. 
     </p> 
-     <a href="lol.html">More Info</a>
+     <a class="more-info" href="lol.html">More Info</a>
     <h2>UI/UX Designer</h2>
     <p>
         A UI/UX designer focuses on creating user-friendly designs to enhance product usability. 
         They analyze user preferences, test design models, and incorporate findings to improve functionality.
         By researching user behavior and target audiences, they develop layouts, designs, and features that enhance website accessibility and user experience. 
     </p>
-  
-    <h5>Sourc: <a href="https://www.comptia.org/en-us/explore-careers/job-roles/full-stack-developer/">Comptia</a></h5>
+  <a class="more-info" href="joi.html">More Info</a>
+    <h5>Source: <a href="https://www.comptia.org/en-us/explore-careers/job-roles/full-stack-developer/">Comptia</a></h5>
 </body>
 </html>
