--- a/lol.html
+++ b/lol.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Developer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <a href="index.html">Home</a>
+   <a class="home" href="index.html">Home</a>
    <h1>Full Stack Developer</h1>
     <p>
         The full stack developer role is a specialized version of the software developer/engineer position. 
@@ -23,6 +24,6 @@
         <li>73,000 Project Jobs openings</li>
     </ul>
 
-    <h5>Sourc: <a href="https://www.comptia.org/en-us/explore-careers/job-roles/full-stack-developer/">Comptia</a></h5>
+    <h5>Source: <a href="https://www.comptia.org/en-us/explore-careers/job-roles/full-stack-developer/">Comptia</a></h5>
 </body>
 </html>
